--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,7 +94,8 @@
             </td></h2>
             <h5><td th:text="${get.username}"></td></h5>
             <div class="fakeimg" style="height:200px;"><td th:text="${get.postBody}"></td></div>
-
+                <a th:type="button" th:href="${'edit/' + get.postId}">Edit post</a>
+                <a th:type="button" th:href="${'delete/' + get.postId}">Delete post</a>
 
         </tr>
 
@@ -111,7 +112,7 @@
             <h3>Popular Post</h3>
             <div class="fakeimg">Image</div><br>
             <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div>
+            <div class="fakeimg">Image</div><br>
         </div>
         <div class="card">
             <h3>Follow Me</h3>
