--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -88,7 +88,7 @@
         <div class="card">
             <tr>
 
-                <form th:action="@{/create} " method="post">
+                <form th:action="@{/create} + '/' + ${user.userId} " method="post">
 
                     <input type="hidden" th:field="${post.postId}" th:object="${post}">
 
@@ -97,9 +97,10 @@
 
                     <div class="fakeimg" th:type="text" style="height:200px;"><td><textarea th:field="${post.postBody}" style="width: 963px; height: 160px;"></textarea></td></div>
 
-                    <h2><td><input type="text" th:field="${post.userId}"></td></h2>
+                    <h2><td><input type="hidden" th:field="${user.userId}"></td></h2>
 
-                    <input type="submit" class="btn btn-success" value="Submit movie">
+                    <input type="submit" class="btn btn-success" value="Submit Post">
+                    <a type="button" class="btn btn-danger" th:href="@{/home} + '/' + ${user.userId}">Back</a>
                 </form>
             </tr>
 
