--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -13,7 +13,7 @@
         body {
             font-family: Arial;
             padding: 20px;
-            background: #f1f1f1;
+            background: lightskyblue;
         }
 
         /* Header/Blog Title */
@@ -21,7 +21,7 @@
             padding: 30px;
             font-size: 40px;
             text-align: center;
-            background: white;
+            background: lavender;
         }
 
         /* Create two unequal columns that floats next to each other */
@@ -47,7 +47,7 @@
 
         /* Add a card effect for articles */
         .card {
-            background-color: white;
+            background-color: lavender;
             padding: 20px;
             margin-top: 20px;
         }
