--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
         body {
             font-family: Arial;
             padding: 20px;
-            background: #f1f1f1;
+            background: lightskyblue;
         }
 
         /* Header/Blog Title */
@@ -21,7 +21,7 @@
             padding: 30px;
             font-size: 40px;
             text-align: center;
-            background: white;
+            background: lavender;
         }
 
         /* Create two unequal columns that floats next to each other */
@@ -48,7 +48,7 @@
 
         /* Add a card effect for articles */
         .card {
-            background-color: white;
+            background-color: lavender;
             padding: 20px;
             margin-top: 20px;
         }
@@ -100,8 +100,8 @@
 
                 <span th:if="${user.privs == 'admin'}">
                 <td>
-                <a class="glyphicon glyphicon-edit" th:href="${'edit/'+ get.postId + '/' +  user.userId}"/></a>
-                <a class="glyphicon glyphicon-remove" th:href="${'delete/'+ get.postId + '/' + user.userId}"/></a>
+                <div style="float: right"><a class="glyphicon glyphicon-edit" th:href="${'edit/'+ get.postId + '/' +  user.userId}"/></a></div>
+                <div style="float: right"><a class="glyphicon glyphicon-remove" th:href="${'delete/'+ get.postId + '/' + user.userId}"/></a></div>
                 </td>
                     </span>
 
@@ -117,12 +117,12 @@
             databases. Many times, i have been furious that the post and/or database didn't work as intended. But as Faisal says... Good... it means that you have to think.
             Oh... and i don't know about the picture, it just found a place here.</p>
         </div>
-      <!--  <div class="card">
+       <div class="card">
             <h3>Popular Post</h3>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div><br>
-            <div class="fakeimg">Image</div><br>
-        </div>-->
+            <div class="fakeimg">Coming soon...</div><br>
+            <div class="fakeimg">Coming soon...</div><br>
+            <div class="fakeimg">Coming soon...</div><br>
+        </div>
         <div class="card">
             <h3>Follow Me</h3>
             <p>Github: Tureczek
